<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gradr</string>
    <string name="app_name_subtext">reach new heights</string>
    <string name="action_settings">Settings</string>
    <string name="gradebook_semester_descripton">Semester Button</string>
    <string name="semester_add_semester_description">Add semester</string>
    <string name="overall_gpa_text">Overall GPA:</string>
    <string name="class_gpa_text">Class GPA:</string>
    <string name="semester_screen_display">Semester Display</string>
    <string name="class_screen_display">Class Display</string>
    <string name="semester_gpa_text">Semester GPA:</string>
    <string name="add_semester_text">+ Add</string>
    <string name="add_class_text"> + Add</string>
    <string name="add_category_text"> + Add</string>
    <string name="semester_hint">Semester Name</string>
    <string name="class_hint">Class Name</string>
    <string name="category_hint">Category Name</string>
    <string name="grade_hint">Grade %</string>
    <string name="assignment_hint">Name</string>
    <string name="weight_hint">Weight</string>

</resources>