<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/semester_main_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/background_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_screen_gradebook_launcher"
            android:contentDescription="@string/semester_screen_display"
            android:gravity="center" />

        <TextView
            android:id="@+id/semester_overall_gpa_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="20dp"
            android:padding="2dp"
            android:text="@string/overall_gpa_text"
            android:textSize="8pt" />

        <TextView
            android:id="@+id/semester_overall_gpa_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/semester_overall_gpa_text"
            android:layout_alignRight="@id/semester_overall_gpa_text"
            android:layout_below="@id/semester_overall_gpa_text"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="12pt"
            android:textStyle="bold" />
    </RelativeLayout>

    <ListView
        android:id="@+id/semester_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/semester_main_display"
        android:layout_alignRight="@id/semester_main_display"
        android:layout_below="@id/semester_main_display"
        android:layout_gravity="center"
        android:focusable="true"
        android:longClickable="true"
        android:paddingLeft="5dp"
        android:textAlignment="center" >
    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_alignLeft="@id/semester_names"
        android:layout_alignRight="@id/semester_names"
        android:layout_below="@id/semester_names"
        android:layout_gravity="center"
        android:background="@drawable/generic_dashed_box"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/add_semester_edit"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="75"
            android:hint="@string/semester_hint"
            android:textColor="#FFFFFF" 
            android:scrollHorizontally="true">
        </EditText>

        <Button
            android:id="@+id/add_semester_button"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:background="@android:color/transparent"
            android:text="@string/add_semester_text"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:paddingRight="5dp"	>
        </Button>
    </LinearLayout>

</RelativeLayout>