<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="50sp" >
    </TextView>
    
    <TextView
        android:id="@+id/title_subtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:layout_below="@id/title_text"
        android:text="@string/app_name_subtext"
        android:textColor="#FFFFFF"
        android:textSize="20sp">
        
    </TextView>

    <RelativeLayout
        android:id="@+id/main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_subtext" >

        <Button
            android:id="@+id/background_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_screen_gradebook_launcher"
            android:gravity="center"
            android:onClick="onSelectMainFragment" />

        <TextView
            android:id="@+id/overall_gpa_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="20dp"
            android:padding="2dp"
            android:text="@string/overall_gpa_text"
            android:textSize="8pt" />

        <TextView
            android:id="@+id/overall_gpa_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/overall_gpa_text"
            android:layout_alignRight="@id/overall_gpa_text"
            android:layout_below="@id/overall_gpa_text"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="12pt"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@id/main_button"
        android:layout_alignRight="@id/main_button"
        android:layout_below="@id/main_button"
        android:layout_centerInParent="true"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/assignment_planner_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/main_screen_assignment_planner_launcher"
            android:onClick="onSelectMainFragment" />
    </LinearLayout>

</RelativeLayout>